--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -29,8 +29,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+
 models:
-  snowflake_finops:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+  snowflake_finops: # This is your project name
+  # Config indicated by + and applies to all files under models
+    staging:
       +materialized: view
+    intermediate:
+      +materialized: ephemeral
+    marts:
+      +materialized: table
